fixed admin login auth

--- a/public/styles.css
+++ b/public/styles.css
@@ -762,3 +762,16 @@ nav a:hover {
                 padding: 1rem;
             }
         }
+
+
+        /* #adminRegisterMessage{
+           color: #00A651;
+            color: #ddd;
+         box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+         border-radius: 8px;
+         padding: 20px;
+         margin-top: 14px;
+         height: 20px;
+         
+
+        } */
