--- a/public/styles.css
+++ b/public/styles.css
@@ -764,14 +764,10 @@ nav a:hover {
         }
 
 
-        /* #adminRegisterMessage{
-           color: #00A651;
-            color: #ddd;
-         box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-         border-radius: 8px;
-         padding: 20px;
-         margin-top: 14px;
-         height: 20px;
-         
-
-        } */
+.payment-options.disabled,
+.payment-method.disabled {
+   
+    
+    pointer-events: none; /* block clicks */
+    user-select: none; /* stop text selection */
+}
