--- a/public/styles.css
+++ b/public/styles.css
@@ -623,37 +623,43 @@ nav a:hover {
             border: 1px solid red;
         }
         
-        /* Footer */
-        footer {
-            background: var(--debt);
-            color: white;
-            text-align: center;
-            padding: 2rem 1rem;
-            margin-top: 2rem;
-        }
-        
-        .footer-links {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin: 1rem 0;
-        }
-        
-        .footer-links a {
-            color: white;
-            margin: 0 1rem;
-            text-decoration: none;
-        }
-        
-        .social-icons {
-            margin: 1rem 0;
-        }
-        
-        .social-icons a {
-            color: white;
-            margin: 0 0.5rem;
-            font-size: 1.5rem;
-        }
+         /* Footer */
+      .footer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  font-size: 0.8rem;
+  padding: 0.5rem;
+  background: var(--debt);
+  color: #fff;
+min-height: 170px; /* Control footer height */
+}
+
+.footer h2, .footer h3 {
+  /* margin-bottom: 1rem; */
+  color: #f8d210; /* branding highlight */
+}
+
+.footer-links a,
+.footer-social a {
+  display: flex;
+  margin: 5px 0;
+  color: #fefdfd;
+  text-decoration: none;
+  transition: color 0.3s;
+   
+}
+
+.footer-links a:hover,
+.footer-social a:hover {
+  color: #f8d210; /* hover effect */
+}
+
+.footer-social a {
+  font-size: 1rem;
+  margin-right: 10px;
+}
+
+
         
         /* WhatsApp Button */
         .whatsapp-btn {
