--- a/public/styles.css
+++ b/public/styles.css
@@ -144,15 +144,7 @@ nav a:hover {
 }
 }
 
-/* nav a:hover {
-    transform: translateY(-10px);
-            box-shadow: 0 15px 30px rgba(0,0,0,0.15);
-} */
 
-
-/* nav a:hover::after {
-    width: 50%;
-} */
 
 #username-text{
     font-size: 12px;
@@ -626,7 +618,7 @@ nav a:hover {
       /* Footer */
       .footer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+/*   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
   font-size: 0.8rem;
   padding: 0.5rem;
   background: var(--debt);
@@ -641,7 +633,7 @@ min-height: 170px;
 
 .footer-links a,
 .footer-social a {
-  display: grid;
+  display: column;
   margin: 5px 0;
   color: #fefdfd;
   text-decoration: none;
