--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,8 @@
             --accent: #00A651;
             --light: #f5f5f5;
             --dark: #333;
+
+
             --gray: #777;
              --success: #4cc9f0;
              --debt: #ff6b6b;
@@ -618,12 +620,12 @@ nav a:hover {
       /* Footer */
       .footer {
   display: grid;
-/*   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
+  grid-template-columns: repeat(auto-fit, minmax(100px, 2fr)); 
   font-size: 0.8rem;
   padding: 0.5rem;
   background: var(--debt);
   color: #fff;
-min-height: 170px; 
+  min-height: 170px; 
 }
 
 .footer h2, .footer h3 {
@@ -633,7 +635,7 @@ min-height: 170px;
 
 .footer-links a,
 .footer-social a {
-  display: column;
+/*   display: flex; */
   margin: 5px 0;
   color: #fefdfd;
   text-decoration: none;
