--- a/public/styles.css
+++ b/public/styles.css
@@ -633,14 +633,23 @@ nav a:hover {
   color: #f8d210;
 }
 
-.footer-links a,
+/* .footer-links a,
 .footer-social a {
-/*   display: flex; */
+  display: flex;
   margin: 5px 0;
   color: #fefdfd;
   text-decoration: none;
   transition: color 0.3s;
    
+} */
+
+.footer-links a,
+.footer-social a {
+    display: flex;
+        text-decoration: none;
+    flex-direction: column;
+    align-items: flex-start; /* ensures left alignment */
+    gap: 0.6rem;
 }
 
 .footer-links a:hover,
