--- a/public/styles.css
+++ b/public/styles.css
@@ -683,7 +683,7 @@ nav a:hover {
             grid-column: 1 / -1;
             text-align: center;
             padding-top: 1rem;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
+/*             border-top: 1px solid rgba(255, 255, 255, 0.1); */
             margin-top: 1rem;
         }
 
