--- a/public/styles.css
+++ b/public/styles.css
@@ -622,7 +622,7 @@ nav a:hover {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 0.8rem;
-            font-size: 1rem;
+            font-size: 13px;
             padding: 1rem;
             background: var(--debt);
             color: #fff;
@@ -671,7 +671,7 @@ nav a:hover {
         }
 
         .footer-social a {
-            font-size: 0.9rem;
+            font-size: 13px;
             transition: transform 0.3s;
         }
 
