--- a/public/styles.css
+++ b/public/styles.css
@@ -655,6 +655,7 @@ nav a:hover {
         .footer-links a,
         .footer-social a {
             color: #fefdfd;
+             
             text-decoration: none;
             transition: color 0.3s;
         }
@@ -666,6 +667,7 @@ nav a:hover {
 
         .footer-social-icons {
             display: flex;
+            align-items:center;
             gap: 1rem;
             margin-top: 0.3rem;
         }
