--- a/public/styles.css
+++ b/public/styles.css
@@ -633,6 +633,7 @@ nav a:hover {
   color:var(--debt);
   margin-bottom: 0.8rem;
   font-size: 1.1rem;
+align-items:start;
 }
 
 .footer-contact p {
